--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9361,6 +9361,9 @@ body {
   transition: width 0.4s ease-in-out;
   z-index: 1;
 }
+.team-details-100 {
+  width:100%;
+}
 
 @media (min-width: 769px) and (max-width: 991.9px) {
   .team-details {
